projects/compiler/test/typechecker/map/error_type_mismatch_value.1.out
Error at %FILE_NAME%:1:14
Type mismatch
  |  { a: 123, b: "hello" }
                  ^
Expected: Int
but instead found: String
